tests/variables/valid/assign.su
s32 main() {
    s32 a;
    a = 2;
    return a;
}