tests/variables/invalid/undeclared_var.su
s32 main() {
    return a;
}